# notary

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  hotkeys.rs  lib.rs  main.rs  note_window.rs
src/components/: NoteCard.tsx  NoteEditor.tsx  TitleBar.tsx  TodoList.tsx  TransparencySlider.tsx
src/hooks/: useNote.ts
src/lib/: tauri.ts
src/styles/: globals.css
