[package]
name = "hthud"
version = "0.1.4"
description = "HoverThought HUD - A sticky notes desktop application"
authors = ["Jay8figures <jay8figures@gmail.com>"]
edition = "2021"

[lib]
name = "hthud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
